--- a/app/src/main/res/layout/activity_beerlist.xml
+++ b/app/src/main/res/layout/activity_beerlist.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/beerList"
+        android:divider="@android:drawable/divider_horizontal_bright"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
