--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,6 @@
              tools:context=".MainActivity"
              tools:ignore="MergeRootFrame">
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/myBeers"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" >
-    </ListView>
-
-
     <LinearLayout
         android:id="@+id/button_area"
         android:layout_margin="8dp"
@@ -23,8 +16,8 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/add_button"
-            android:text="@string/add_beer"
+            android:id="@+id/show_beers"
+            android:text="@string/show_beers"
             android:textColor="@android:color/white"
             android:background="@android:color/holo_blue_light"
             android:layout_width="wrap_content"
@@ -33,8 +26,8 @@
 
         <Button
             android:layout_weight="1"
-            android:id="@+id/clear_button"
-            android:text="@string/show_my_beers"
+            android:id="@+id/add_beer_button"
+            android:text="@string/add_beer"
             android:layout_marginStart="8dp"
             android:textColor="@android:color/white"
             android:background="@android:color/holo_blue_light"
