--- a/app/src/main/res/layout/beer_list_item.xml
+++ b/app/src/main/res/layout/beer_list_item.xml
@@ -8,9 +8,26 @@
     android:clickable="true"
     android:layout_height="48dp">
 
+    <ImageView
+        android:id="@+id/beers_i_drank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:id="@+id/name"
-        android:text="ewewewew"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/description"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/pub"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
