--- a/app/src/main/res/layout/activity_add_beer.xml
+++ b/app/src/main/res/layout/activity_add_beer.xml
@@ -6,12 +6,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="net.cozz.danco.finalproject.AddBeerActivity">
 
-    <ImageView
-        android:id="@+id/beer_to_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" />
-
     <!--<RatingBar-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -20,33 +14,55 @@
         <!--android:layout_alignParentStart="true"-->
         <!--android:layout_marginTop="53dp" />-->
 
-    <EditText
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:hint="@string/hint_beer_name"
-        android:id="@+id/txtBeerName"
-        android:layout_alignEnd="@id/beer_to_add"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="69dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical"
+        android:weightSum="1.0">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:hint="@string/hint_description"
-        android:id="@+id/txtDescription"
-        android:layout_below="@+id/txtBeerName"
-        android:layout_alignStart="@+id/txtBeerName" />
+        <ImageView
+            android:id="@+id/beer_to_add"
+            android:layout_width="100dp"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/hint_pub_name"
-        android:id="@+id/txtPubName"
-        android:layout_below="@+id/txtDescription"
-        android:layout_alignStart="@+id/txtDescription" />
+        <EditText
+            android:layout_marginStart="126dp"
+            android:id="@+id/edit_txt_beer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:hint="@string/hint_beer_name"
+            android:layout_alignEnd="@id/beer_to_add"
+            android:singleLine="true"
+            android:imeOptions="actionNext"
+             />
+
+        <EditText
+            android:id="@+id/edit_txt_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:hint="@string/hint_description"
+            android:layout_below="@id/edit_txt_beer_name"
+            android:singleLine="true"
+            android:imeOptions="actionNext"
+             />
+
+        <EditText
+            android:id="@+id/edit_txt_pub_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:hint="@string/hint_pub_name"
+            android:layout_below="@id/edit_txt_description"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+             />
+    </RelativeLayout>
 
     <Button
         android:layout_width="wrap_content"
