--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
              tools:context=".MainActivity"
              tools:ignore="MergeRootFrame">
 
+    <ListView
+        android:id="@+id/list_view_beers"
+        android:divider="@android:drawable/divider_horizontal_bright"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:id="@+id/button_area"
         android:layout_margin="8dp"
