--- a/app/src/main/res/layout/activity_add_beer.xml
+++ b/app/src/main/res/layout/activity_add_beer.xml
@@ -14,55 +14,59 @@
         <!--android:layout_alignParentStart="true"-->
         <!--android:layout_marginTop="53dp" />-->
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="32dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:weightSum="1.0">
 
         <ImageView
             android:id="@+id/beer_to_add"
             android:layout_width="100dp"
-            android:layout_height="200dp"
-            android:layout_alignParentStart="true" />
+            android:layout_height="300dp"
+            />
 
-        <EditText
-            android:layout_marginStart="126dp"
-            android:id="@+id/edit_txt_beer_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:hint="@string/hint_beer_name"
-            android:layout_alignEnd="@id/beer_to_add"
-            android:singleLine="true"
-            android:imeOptions="actionNext"
-             />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edit_txt_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:hint="@string/hint_description"
-            android:layout_below="@id/edit_txt_beer_name"
-            android:singleLine="true"
-            android:imeOptions="actionNext"
-             />
+            <EditText
+                android:id="@+id/edit_txt_beer_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:hint="@string/hint_beer_name"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                />
 
-        <EditText
-            android:id="@+id/edit_txt_pub_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:hint="@string/hint_pub_name"
-            android:layout_below="@id/edit_txt_description"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-             />
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/edit_txt_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:hint="@string/hint_description"
+                android:layout_below="@id/edit_txt_beer_name"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                />
+
+            <EditText
+                android:id="@+id/edit_txt_pub_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:hint="@string/hint_pub_name"
+                android:layout_below="@id/edit_txt_description"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
+                />
+            </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
