--- a/app/src/main/res/layout/activity_beer_list.xml
+++ b/app/src/main/res/layout/activity_beer_list.xml
@@ -8,8 +8,15 @@
 
     <ListView
         android:id="@+id/list_view_beers"
-        android:divider="@android:drawable/divider_horizontal_bright"
+        android:divider="@android:drawable/divider_horizontal_dim_dark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/add_another"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:text="@string/add_another"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/list_view_beers"/>
 </RelativeLayout>
