--- a/app/src/main/res/menu/menu_beer_list.xml
+++ b/app/src/main/res/menu/menu_beer_list.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="net.cozz.danco.finalproject.BeerListActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/add_another"
+        android:title="@string/add_another"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom" />
 </menu>
