--- a/app/src/main/res/layout/beer_list_item.xml
+++ b/app/src/main/res/layout/beer_list_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,7 +8,7 @@
     android:layout_height="48dp">
 
     <ImageView
-        android:id="@+id/my_beers"
+        android:id="@+id/beer_image"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_marginEnd="4dp"
@@ -17,23 +16,23 @@
 
     <TextView
         android:id="@+id/name"
-        android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toEndOf="@id/my_beers"/>
+        android:layout_height="16dp"
+        android:layout_toEndOf="@id/beer_image"/>
 
     <TextView
         android:id="@+id/description"
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="16dp"
+        android:layout_toEndOf="@id/beer_image"
         android:layout_below="@id/name"/>
 
     <TextView
         android:id="@+id/pub"
-        android:gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/description"/>
+        android:layout_height="16dp"
+        android:layout_toEndOf="@id/beer_image"
+        android:layout_below="@id/description"
+        />
 
 </RelativeLayout>
