--- a/app/src/main/res/layout/beer_list_item.xml
+++ b/app/src/main/res/layout/beer_list_item.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/beer_image"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:layout_marginEnd="2dp"
         />
 
