--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,30 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              tools:ignore="MergeRootFrame">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
     <ListView
         android:id="@+id/list_view_beers"
         android:divider="@android:drawable/divider_horizontal_bright"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <LinearLayout
         android:id="@+id/button_area"
+        android:layout_gravity="bottom"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,6 +46,7 @@
             android:id="@+id/add_beer_button"
             android:text="@string/add_beer"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@android:color/white"
             android:background="@android:color/holo_blue_light"
             android:layout_width="wrap_content"
