--- a/app/src/main/res/layout/beer_list_item.xml
+++ b/app/src/main/res/layout/beer_list_item.xml
@@ -11,27 +11,35 @@
         android:id="@+id/beer_image"
         android:layout_width="100dp"
         android:layout_height="120dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="15dp"
-        android:layout_toEndOf="@id/beer_image"/>
+        android:layout_toEndOf="@id/beer_image"
+        android:layout_toRightOf="@id/beer_image"
+        />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="15dp"
         android:layout_toEndOf="@id/beer_image"
-        android:layout_below="@id/name"/>
+        android:layout_toRightOf="@id/beer_image"
+        android:layout_below="@id/name"
+        />
 
     <TextView
         android:id="@+id/pub"
         android:layout_width="match_parent"
         android:layout_height="15dp"
         android:layout_toEndOf="@id/beer_image"
+        android:layout_toRightOf="@id/beer_image"
         android:layout_below="@id/description"
         />
 
