--- a/app/src/main/res/menu/menu_beer_list.xml
+++ b/app/src/main/res/menu/menu_beer_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.cozz.danco.finalproject.BeerListActivity">
+    tools:context="net.cozz.danco.finalproject.activities.BeerListActivity">
     <item android:id="@+id/add_another"
         android:title="@string/add_another"
         android:orderInCategory="100"
