--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,12 @@
     <color name="primary_color_dark">#303F9F</color>
     <color name="accent_color">#E91E63</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="deep_orange_500">#FF5722</color>
+    <color name="deep_orange_700">#E64A19</color>
+    <color name="light_blue_700">#0288D1</color>
+
+    <color name="colorPrimary">@color/deep_orange_500</color>
+    <color name="colorPrimaryDark">@color/deep_orange_700</color>
+    <color name="colorAccent">@color/light_blue_700</color>
 </resources>
